Always use getDeclaredConstructor before newInstance